--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
         </div>
 
     </div>
+    <div id="About">
+        <div class="row">
+            <div class="about-col-1">
+                <img src="" alt="">
+            </div>
+        </div>
+
+
+
+    </div>
 
 </body>
 
