--- a/index.html
+++ b/index.html
@@ -30,15 +30,38 @@
         </div>
 
     </div>
-    <div id="About">
+
+    <!--------------about---------->
+    <div id="about">
         <div class="row">
             <div class="about-col-1">
-                <img src="" alt="">
+                <img src="images/photo2.jpeg">
+            </div>
+            <div class="about-col-2">
+                <h2 class="sub-title">About Me</h2>
+                <p class="aboutme">My name is Mateusz. I graduated from the University of Economics in Krakow in the
+                    field of applied
+                    computer science. During my studies, I worked as a banker for a business client. At the moment I am
+                    looking for my first job as a developer. For the last few months I have been improving my Python
+                    programming skills. In 2017, I completed a full-time certified FrontEnd developer course at the
+                    CodersLab programming school.</p>
+
+                <div class="tab-titles">
+                    <p class="tab-links active-link">Skills</p>
+                    <p class="tab-links">Experience</p>
+                    <p class="tab-links">Education</p>
+                </div>
+                <div class="tab-contents">
+                    <ul>
+                        <li><span>Python</span><br> Simple apliaction</li>
+                        <li><span>Tkinter</span><br> Building Python GUI apps</li>
+                        <li><span>UI</span><br> Designing Web interfaces</li>
+                        <li><span>Ubuntu</span><br> Queries In CLI </li>
+                        <li><span>SQL</span> <br> Creating and extracting data from databases</li>
+                    </ul>
+                </div>
             </div>
         </div>
-
-
-
     </div>
 
 </body>
