--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/2fedd6c208.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -24,7 +25,7 @@
             </nav>
             <div class="header-text">
                 <p>Python Developer</p>
-                <h1>Hi, welcome to my website,<br> I'm <span>Mateusz</span> Wróbel.</h1>
+                <h1><span>H</span>i, welcome to my website,<br> I'm <span>Mateusz</span> Wróbel.</h1>
 
             </div>
         </div>
@@ -38,7 +39,7 @@
                 <img src="images/photo2.jpeg">
             </div>
             <div class="about-col-2">
-                <h2 class="sub-title">About Me</h2>
+                <h2 class="sub-title"><span>A</span>bout Me</h2>
                 <p class="aboutme">My name is Mateusz. I graduated from the University of Economics in Krakow in the
                     field of applied
                     computer science. During my studies, I worked as a banker for a business client. At the moment I am
@@ -47,23 +48,87 @@
                     CodersLab programming school.</p>
 
                 <div class="tab-titles">
-                    <p class="tab-links active-link">Skills</p>
-                    <p class="tab-links">Experience</p>
-                    <p class="tab-links">Education</p>
+                    <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
+                    <p class="tab-links" onclick="opentab('experience')">Experience</p>
+                    <p class="tab-links" onclick="opentab('education')">Education</p>
                 </div>
-                <div class="tab-contents">
+                <div class="tab-contents active-tab" id="skills">
                     <ul>
                         <li><span>Python</span><br> Simple apliaction</li>
-                        <li><span>Tkinter</span><br> Building Python GUI apps</li>
-                        <li><span>UI</span><br> Designing Web interfaces</li>
-                        <li><span>Ubuntu</span><br> Queries In CLI </li>
+                        <li><span>Tkinter</span><br> Building python GUI apps</li>
+                        <li><span>UI</span><br> Designing web interfaces</li>
+                        <li><span>Ubuntu</span><br> Queries in CLI </li>
                         <li><span>SQL</span> <br> Creating and extracting data from databases</li>
+                    </ul>
+                </div>
+                <div class="tab-contents experience" id="experience">
+                    <ul>
+                        <li><span>2022-present</span><br>Project Menager at Elektro-Spec Sp. z o.o. </li>
+                        <li><span>2022-2023</span><br> Junior Support Specialist at Adminotaur Sp. z o.o.</li>
+                        <li><span>2018-2022</span><br> Business Client Advisor at CMI Maciej Uhl(Alior Bank) </li>
+                        <li><span>2016-2017</span><br>Customer Service Consultant at ITI Neovision(Canal+) </li>
+                    </ul>
+                </div>
+                <div class="tab-contents education" id="education">
+                    <ul>
+                        <li><span>2022</span><br> Data Analyst Associate Certification at datacamp.com</li>
+                        <li><span>2017-2019</span><br> Cracow University of Economics Master degree, Applied Computer
+                            Science</li>
+                        <li><span>2012-2016</span><br> Cracow University of Economics Bachelor degree, Applied Computer
+                            Science</li>
+                        <li><span>2017</span><br> Become FrontEnd Developer Certification at Coderslab </li>
                     </ul>
                 </div>
             </div>
         </div>
     </div>
+    <!---------services--------------->
+    <div id="services">
+        <div class="container">
+            <h2 class="sub-title"><span>M</span>y Services</h2>
+            <div class="services-list">
+                <div>
+                    <i class="fa-solid fa-code"></i>
+                    <h3>Game Craft Calculator</h3>
+                    <p>Simple game craft profit calculator. GUI app written using tkinter and python. The results are
+                        stored in a database using Sqlite3. </p>
+                    <a href="#">Full project on github</a>
+                </div>
+                <div>
+                    <i class="fa-solid fa-code"></i>
+                    <h3>Game Craft Calculator</h3>
+                    <p>Simple game craft profit calculator. GUI app written using tkinter and python. The results are
+                        stored in a database using Sqlite3. </p>
+                    <a href="#">Full project on github</a>
+                </div>
+                <div>
+                    <i class="fa-solid fa-code"></i>
+                    <h3>Game Craft Calculator</h3>
+                    <p>Simple game craft profit calculator. GUI app written using tkinter and python. The results are
+                        stored in a database using Sqlite3. </p>
+                    <a href="#">Full project on github</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
+
+    <script>
+
+        var tablinks = document.getElementsByClassName("tab-links")
+        var tabcontents = document.getElementsByClassName("tab-contents")
+        function opentab(tabname) {
+            for (tablink of tablinks) {
+                tablink.classList.remove("active-link");
+            }
+            for (tabcontent of tabcontents) {
+                tabcontent.classList.remove("active-tab");
+            }
+            event.currentTarget.classList.add("active-link")
+            document.getElementById(tabname).classList.add("active-tab")
+        }
+
+    </script>
 </body>
 
 </html>
