--- a/index.html
+++ b/index.html
@@ -113,6 +113,34 @@
     </div>
 
 
+    <!-------------contact------------------------>
+    <div id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="contact-left">
+                    <h2 class="sub-title"><span>C</span>ontact Me</h2>
+                    <p><i class="fa-solid fa-phone"></i>mateusz.wrobel993@gmail.com </p>
+                    <p><i class="fa-sharp fa-solid fa-share"></i> +48604718555</p>
+                    <div class="social-icons">
+                        <a href="https://www.linkedin.com/in/mateuszwr%C3%B3bel/"><i class="fa-brands fa-linkedin">
+                            </i></a>
+                        <a href="https://github.com/MatWro"> <i class="fa-brands fa-github"></i></a>
+                    </div>
+                    <a href="images/Mateusz Wróbel CV ENG.pdf" download class="btn">Download CV</a>
+                </div>
+                <div class="contact-right">
+                    <form>
+                        <input type="text" name="Name" placeholder="Your Name" required>
+                        <input type="email" name="email" placeholder="Your Email" required>
+                        <textarea name="Message" row="6" placeholder="Your Message"></textarea>
+                        <button type="submit" class="btn">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <script>
 
         var tablinks = document.getElementsByClassName("tab-links")
