--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="images/logo.png" class="logo">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contact</a></li>
+                <img src="images/logo2.png" class="logo">
+                <ul id="sidemenu">
+                    <li><a href="#header">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
+                <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
                 <p>Python Developer</p>
@@ -82,11 +83,11 @@
             </div>
         </div>
     </div>
-    <!---------services--------------->
-    <div id="services">
+    <!---------portfolio--------------->
+    <div id="portfolio">
         <div class="container">
-            <h2 class="sub-title"><span>M</span>y Services</h2>
-            <div class="services-list">
+            <h2 class="sub-title"><span>P</span>ortfolio</h2>
+            <div class="portfolio-list">
                 <div>
                     <i class="fa-solid fa-code"></i>
                     <h3>Game Craft Calculator</h3>
@@ -129,14 +130,17 @@
                     <a href="images/Mateusz Wróbel CV ENG.pdf" download class="btn">Download CV</a>
                 </div>
                 <div class="contact-right">
-                    <form>
+                    <form name="submit-to-google-sheet">
                         <input type="text" name="Name" placeholder="Your Name" required>
-                        <input type="email" name="email" placeholder="Your Email" required>
+                        <input type="email" name="Email" placeholder="Your Email" required>
                         <textarea name="Message" row="6" placeholder="Your Message"></textarea>
                         <button type="submit" class="btn">Submit</button>
                     </form>
                 </div>
             </div>
+        </div>
+        <div class="copyright">
+            <p>Copyright © 2023, Mateusz Wróbel </p>
         </div>
     </div>
 
@@ -156,6 +160,28 @@
             document.getElementById(tabname).classList.add("active-tab")
         }
 
+    </script>
+    <script>
+        var sidemenu = document.getElementById("sidemenu")
+
+        function openmenu() {
+            sidemenu.style.right = "0";
+        }
+        function closemenu() {
+            sidemenu.style.right = "-200px";
+        }
+    </script>
+
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbzmPHxAe9jN4ltWMUiG8RAapOWUdAdPgNVcFWbuL0VIqp65geUGvP3KT4Z5kKE8cJyk/exec'
+        const form = document.forms['submit-to-google-sheet']
+
+        form.addEventListener('submit', e => {
+            e.preventDefault()
+            fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+                .then(response => console.log('Success!', response))
+                .catch(error => console.error('Error!', error.message))
+        })
     </script>
 </body>
 
